# RBC-TESTESR

./: .conversion_state.json  .gitignore  PROJECT_REPORT.md  README.md  config.yaml  convert.py  pyproject.toml  requirements.txt  summary.json
cache/: knowledge_cache.db
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/dashboard/: conversion-panel.tsx  file-types.tsx  files-panel.tsx  graph-panel.tsx  logs-panel.tsx  stat-cards.tsx  system-bar.tsx  timeline-panel.tsx
frontend/src/components/ui/: button.tsx  card.tsx  progress.tsx  select.tsx  table.tsx  tabs.tsx
frontend/src/hooks/: use-api.ts
input/: test_document.txt  trust_issues.md
output/: test_document.md  trust_issues.md
src/: __init__.py  backlink_engine.py  cache_manager.py  cleaner.py  config.py  converter.py  embedding_engine.py  graph_builder.py  main.py  metadata_extractor.py  monitor.py  ocr.py  timeline_builder.py  utils.py
tests/: test_cleaner.py  test_config.py  test_converter.py  test_utils.py
web/: api.py  app.py
web/static/: app.js  style.css
web/templates/: dashboard.html
