[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rbc-tester"
version = "1.0.0"
description = "RBC-TESTER: Riya Built-in Commands and Memories — raw data conversion pipeline for LLM training data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Riya Koushik"},
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pillow>=10.3.0",
    "python-dateutil>=2.9.0",
    "rapidfuzz>=3.14.0",
    "networkx>=3.3.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.0",
    "lxml>=5.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
ocr = [
    "easyocr>=1.7.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "opencv-python-headless>=4.9.0",
]
pdf = [
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "pypdf>=6.0.0",
]
office = [
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
]
knowledge = [
    "sentence-transformers>=2.7.0",
    "faiss-cpu>=1.8.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "nltk>=3.9.0",
]
unstructured = [
    "unstructured[all-docs]>=0.15.0",
]
web = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
]
all = [
    "rbc-tester[ocr,pdf,office,knowledge,unstructured,web]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
rbc-tester = "src.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
